# imgres-api

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: login.rs  mod.rs  resize.rs  resize_api.rs
src/api/params/: mod.rs  resize_params.rs
src/auth/: mod.rs  token_auth.rs
src/core/: ai.rs  algorithm.rs  mod.rs
src/db/: file.rs  kv.rs  mod.rs  user.rs  user_opt.rs  user_recharge.rs
src/extractor/: auth_user.rs  mod.rs
src/middleware/: auth.rs  mod.rs
