[package]
name = "image_resize"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
fast_image_resize = { version = "5.1.0", features = ["image"] }
image = { version = "0.25.5", features = ["jpeg", "png", "webp"] }
anyhow = "1.0.95"
poem = { version = "3.1.5", features = [
    "multipart",
    "anyhow",
    "csrf",
] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.216" }
serde_json = "1.0.134"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zip = { version = "2.2.2" }
rand = { version = "0.8.5" }
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = { version = "0.12.9", features = ["json"] }
aws-config = { version = "1.5.12" }
aws-sdk-s3 = { version = "1.67.0" }
aws-sdk-dsql = { version = "1.2.0" }
bytes = { version = "1.9.0" }
dotenvy = { version = "0.15.7" }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
url = { version = "2.5.4" }
google-oauth = { version = "1" }
